cros: Update shelf background when going to tablet mode

The bug is that when transitioning to tablet mode with a window
(which will expand to fullscreen) open and a shown AppList results in
a stale shelf background.

This is a corner case, where the AppList does not change in visibility,
it remains visible and the shelf does not know to re-evaluate its
background.

Maybe the shelf should observe active windows instead of relying on
AppList visibility state changes?

For now, we fix this corner case by forcing the shelf to re-evaluate
it's background when the launcher stays open during the tablet mode
transition.

Test=automated and manual

Bug: 879591
Change-Id: I71c8d97672824853b0edac77e1a91734ba148af0
Reviewed-on: https://chromium-review.googlesource.com/1200408
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589329}
Former-commit-id: b5ecbcc8e92fa86c4b62ec6d5f403555d15a141f