ash/app_list/app_list_controller_impl.cc
@@ -20,6 +20,7 @@
 #include "ash/public/cpp/app_list/answer_card_contents_registry.h"
 #include "ash/public/cpp/app_list/app_list_features.h"
 #include "ash/session/session_controller.h"
+#include "ash/shelf/shelf.h"
 #include "ash/shell.h"
 #include "ash/voice_interaction/voice_interaction_controller.h"
 #include "ash/wallpaper/wallpaper_controller.h"
@@ -540,6 +541,7 @@ void AppListControllerImpl::OnTabletModeStarted() {
   Show(display::Display::InternalDisplayId(), app_list::kTabletMode,
        base::TimeTicks());
   UpdateHomeLauncherVisibility();
+  Shelf::ForWindow(presenter_.GetWindow())->MaybeUpdateShelfBackground();
 }
 
 void AppListControllerImpl::OnTabletModeEnded() {
