ash/shelf/shelf_layout_manager.cc
@@ -576,6 +576,17 @@ void ShelfLayoutManager::SetDockedMagnifierHeight(int height) {
   LayoutShelf();
 }
 
+void ShelfLayoutManager::MaybeUpdateShelfBackground(AnimationChangeType type) {
+  const ShelfBackgroundType new_background_type(GetShelfBackgroundType());
+
+  if (new_background_type == shelf_background_type_)
+    return;
+
+  shelf_background_type_ = new_background_type;
+  for (auto& observer : observers_)
+    observer.OnBackgroundUpdated(shelf_background_type_, type);
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // ShelfLayoutManager, private:
 
@@ -923,17 +934,6 @@ void ShelfLayoutManager::UpdateTargetBoundsForGesture(
           ShelfConstants::shelf_size());
     }
   }
-}
-
-void ShelfLayoutManager::MaybeUpdateShelfBackground(AnimationChangeType type) {
-  const ShelfBackgroundType new_background_type(GetShelfBackgroundType());
-
-  if (new_background_type == shelf_background_type_)
-    return;
-
-  shelf_background_type_ = new_background_type;
-  for (auto& observer : observers_)
-    observer.OnBackgroundUpdated(shelf_background_type_, type);
 }
 
 void ShelfLayoutManager::UpdateAutoHideStateNow() {
